example-spring-cloud-kubernetes-hello-world/k8s/example-spring-cloud-kubernetes-hello-world-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-spring-cloud-kubernetes-hello-world
