example-spring-cloud-kubernetes-hello-world/k8s/example-spring-cloud-kubernetes-hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: example-spring-cloud-kubernetes-hello-world
  name: example-spring-cloud-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: kubernetes-hello-world.toquery.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-spring-cloud-kubernetes-hello-world
                port:
                  number: 8080
